--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ authToken = aaae1843e5f3dd71164425be5abdaab0
 RAZORPAY_KEY_ID = rzp_test_Q6NMBBDHq9vpwS
 RAZORPAY_SECRET = xhD0unnLpibgC1JsJ33D9HIq
 
-DB_HOST= localhost
-DB_USERNAME = root
-PASSWORD = root123
-DB_DBNAME = razotransutility
-DB_PORT = 3306
+# DB_HOST= localhost
+# DB_USERNAME = root
+# PASSWORD = root123
+# DB_DBNAME = razotransutility
+# DB_PORT = 3306
