--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ authToken = aaae1843e5f3dd71164425be5abdaab0
 RAZORPAY_KEY_ID = rzp_test_Q6NMBBDHq9vpwS
 RAZORPAY_SECRET = xhD0unnLpibgC1JsJ33D9HIq
 
-# DB_HOST= localhost
-# DB_USERNAME = root
-# PASSWORD = root123
-# DB_DBNAME = razotransutility
-# DB_PORT = 3306
+DB_HOST= bnsuq09gy9swd2ihci9w-mysql.services.clever-cloud.com
+DB_USERNAME = ujlir5m8cuaneg3h
+PASSWORD = Hp8hzm7mHczEb6NZDWrR
+DB_DBNAME = bnsuq09gy9swd2ihci9w
+DB_PORT = 3306
