--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 accountSid = AC176601214a8c16f269337c1172e2788d
 authToken = aaae1843e5f3dd71164425be5abdaab0
 
-RAZORPAY_KEY_ID = rzp_test_Q6NMBBDHq9vpwS
-RAZORPAY_SECRET = xhD0unnLpibgC1JsJ33D9HIq
+RAZORPAY_KEY_ID = rzp_live_KxLmp2zN6kUt9n
+RAZORPAY_SECRET = Ponz1gMjNlDyoVADG8WlX1Yi
 
 DB_HOST= bnsuq09gy9swd2ihci9w-mysql.services.clever-cloud.com
 DB_USERNAME = ujlir5m8cuaneg3h
