--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ authToken = aaae1843e5f3dd71164425be5abdaab0
 RAZORPAY_KEY_ID = rzp_live_KxLmp2zN6kUt9n
 RAZORPAY_SECRET = Ponz1gMjNlDyoVADG8WlX1Yi
 
-DB_HOST= bnsuq09gy9swd2ihci9w-mysql.services.clever-cloud.com
-DB_USERNAME = ujlir5m8cuaneg3h
-PASSWORD = Hp8hzm7mHczEb6NZDWrR
-DB_DBNAME = bnsuq09gy9swd2ihci9w
+DB_HOST= b71y6cif97gxvsa5ys7h-mysql.services.clever-cloud.com
+DB_USERNAME = ugxl3gh9dynolqvt
+PASSWORD = ywCBFttetV5hioWWHr7K
+DB_DBNAME = b71y6cif97gxvsa5ys7h
 DB_PORT = 3306
